[gd_scene load_steps=3 format=3 uid="uid://dnhsbjoa2n44e"]

[ext_resource type="Script" uid="uid://dil4qco0n5mnq" path="res://game/scripts/autoload/audio_manager/audio_manager.gd" id="1_us30y"]
[ext_resource type="PackedScene" uid="uid://cv1s172jl6jpm" path="res://game/scenes/audio/audio_player.tscn" id="2_yi06v"]

[node name="audio_manager" type="Node"]
process_mode = 3
script = ExtResource("1_us30y")
audio_player_prefab = ExtResource("2_yi06v")

[node name="audio_players" type="Node" parent="."]

[node name="music_players" type="Node" parent="."]

[node name="current_music_player" type="AudioStreamPlayer2D" parent="music_players"]
bus = &"Music"

[node name="upcoming_music_player" type="AudioStreamPlayer2D" parent="music_players"]
bus = &"Music"
